--- a/settings.json
+++ b/settings.json
@@ -4,17 +4,17 @@
 	"ownerNumber": "94741517138",
 	"ownerNumberr": "+94741517138",
 	"botnumber": "94741517138",
-	"cr": "Queen Alexa",
+	"cr": "Queen Riyo",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
-	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
+	"wa": "wa.me/+94741517138",
+	"donate": " +94741517138",
+	"ig": "https://chat.whatsapp.com/J1BLdA3KQxTLSl7k1qtYHC",
+	"gt": "https://github.com/sadewrashmina",
 	"ownername": "© RIYO-MOD",
-	"botname":"「 Queen Alexa 」",
+	"botname":"「 Queen Riyo 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 queen Riyo 」\n© RIYO-MOD"
 }
